--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,15 +1,41 @@
-name: 'coverage'
+# This workflow will install dependencies, create coverage tests and run Pytest Coverage Comment
+# For more information see: https://github.com/MishaKav/pytest-coverage-comment/
+name: pytest-coverage-comment
 on:
   pull_request:
     branches:
-      - master
-      - main
+      - '*'
 jobs:
-  coverage:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Python Cov
-        uses: orgoro/coverage@v2
+      - uses: actions/checkout@v2
+
+      - name: Set up Python 3.9
+        uses: actions/setup-python@v2
         with:
-          coverageFile: ${{ github.workspace }}/coverage.xml
-          token: ${{ secrets.TOKEN }}
+          python-version: 3.9
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install flake8 pytest pytest-cov
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+      - name: Build coverage file
+        run: |
+          pytest --junitxml=pytest.xml --cov-report=term-missing:skip-covered --cov=app tests/ | tee pytest-coverage.txt
+
+      - name: Pytest coverage comment
+        uses: MishaKav/pytest-coverage-comment@main
+        with:
+          pytest-coverage-path: ./pytest-coverage.txt
+          title: My Coverage Report Title
+          badge-title: My Badge Coverage Title
+          hide-badge: false
+          hide-report: false
+          create-new-comment: false
+          hide-comment: false
+          report-only-changed-files: false
+          junitxml-path: ./coverage.xml
+          junitxml-title: My JUnit Xml Summary Title
