--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Pytest coverage comment
         uses: MishaKav/pytest-coverage-comment@main
         with:
-          pytest-coverage-path: ./pytest-coverage.txt
+          pytest-coverage-path: pytest-coverage.txt
           title: My Coverage Report Title
           badge-title: My Badge Coverage Title
           hide-badge: false
@@ -37,5 +37,5 @@ jobs:
           create-new-comment: false
           hide-comment: false
           report-only-changed-files: false
-          junitxml-path: ./coverage.xml
+          junitxml-path: pytest.xml
           junitxml-title: My JUnit Xml Summary Title
